--- a/block-03/index.html
+++ b/block-03/index.html
@@ -29,14 +29,23 @@
     </section>
     <section id="about" class="about">
       <div class="left-about">
-        <div class="bg-yellow"></div>
-        <div class="bg-black"></div>
+        <div class="squares">
+          <div class="bg-yellow"></div>
+          <div class="squares2">
+            <div class="bg-yellow2"></div>
+            <div class="bg-black">
+              <video width="250px" height="250px" autoplay loop>
+              <source src="https://thumbs.gfycat.com/DamagedImportantAmurratsnake-mobile.mp4" alt="hello world gif found at gfycat"/>  
+              </video>
+            </div>
+          </div>
+        </div>
         <!--<div class="separationTwo">&#62;&#62;&#62;&#62;&#62;&#62;&#62;&#62;&#62;&#62;&#62;&#62;&#62;&#62;&#62;&#62;&#62;&#62;&#62;&#62;&#62;&#62;&#62;&#62;&#62;</div>-->
         <div class="separationTwo">v<br>v<br>v<br>v<br>v<br>v<br>v<br>v<br>v<br>v<br>v<br>v<br>v<br>v<br>v<br>v<br>v<br>v</div>
       </div>
       <div class="right-about">
       <h5>WHO AM I</h5>
-      <h1>HELLO</h1>
+      <h1>HELLO,</h1>
       <p>I am a civil engineer who decided to change her career at the very beginning. I graduated in late 2019, and in early 2020 I was introduced to Trybe, the school of the future. At the time, looking for something to leverage my career and define an area of expertise, getting to know the school was what I needed to have the courage to take risks and change.<br>
       <br>Passionate about technology and how it can transform and positively impact society, I decided to take Trybe's Full-Stack Software Developer course. Since April 2020, I am committed to learning how to develop software and contribute to the development of functional and innovative technologies.</p>
     </div>
@@ -47,12 +56,19 @@
         <a href="https://renatanovais.github.io/to-do-list/my-list.html" target="_blank"><img src="to-do-list.png" alt="to-do-list project"/></a>
         <a href="https://renatanovais.github.io/meme-generator/meme-generator.html" target="_blank"><img src="meme-generator.png" alt="meme-generator project"/></a>
         <a href="https://renatanovais.github.io/make-me-an-artist/pixel-art.html" target="_blank"><img src="pixel-art.png" alt="pixel-art project"/></a>
-        <a href="https://renatanovais.github.io/visa476/visa476.html" target="_blank"><img src="visa-476.png" alt="page about visa 476 UFMG Australia"/></a>
-        <a href="https://renatanovais.github.io/mantis-shrimp/mantis-shrimp.html" target="_blank"><img src="mantis-shrimp.png" alt="mantis-shrimp project"/></a>      
+        <!--<a href="https://renatanovais.github.io/visa476/visa476.html" target="_blank"><img src="visa-476.png" alt="page about visa 476 UFMG Australia"/></a>
+        <a href="https://renatanovais.github.io/mantis-shrimp/mantis-shrimp.html" target="_blank"><img src="mantis-shrimp.png" alt="mantis-shrimp project"/></a>-->
       </div>
     </section>
     <footer id="contact" class="footer">
+      <h5>Get in touch</h5>
       <h4>Contact</h4>
+      <div class="contact-link">
+        <a target="_blank" href="https://github.com/RenataNovais" class="fa fa-github"></a>
+        <a target="-blank" href="https://www.linkedin.com/in/renata-novais-de-castro-santos-b381b4116/" class="fa fa-linkedin"></a>
+        <a target="_blank" href="https://www.instagram.com/renatanovaiss/" class="fa fa-instagram"></a>
+      </div>
+      <h6>Renata Novais - 2020</h6>
     </footer>
   </body>
   <script src="script.js"></script>
